# mcp_rail_gun

./: .gitignore  ARCHITECTURE_UPDATE.md  LICENSE  MANIFEST.in  PACKAGE_STATUS.md  pyproject.toml  railgun_only_config.json  readme.md  requirements.txt
examples/: CLAUDE_DESKTOP_SETUP.md  basic_usage.py  claude_desktop_config_sample.json  config_example.json  mcp_client_config.json
railgun_mcp/: __init__.py  __main__.py  models.py  server.py
railgun_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: __init__.py  test_config.py
